--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tp IGL</title>
   </head>
-  <body style="overflow-x:hidden;padding: 0px; margin: 0px; overflow-y:hidden; background-color: #f8f9fa;">
+  <body style="overflow-x:hidden; padding: 0px; margin:0px;
+    background-image: url(footer-img.png);
+    background-repeat: no-repeat;
+    background-size: 130%;
+    background-color: #f8f9fa;"
+    
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id="footer"></div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
