--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Tp IGL</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+    $(document).ready(function(){
+      $("#myInput").on("keyup", function() {
+        var value = $(this).val().toLowerCase();
+        $("#myTable tr").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+    </script>
   </head>
   <body style="overflow-x:hidden; padding: 0px; margin:0px;
     background-image: url(footer-img.png);
